# ecs_bench_suite

./: Cargo.toml
src/bevy/: add_remove.rs  heavy_compute.rs  schedule.rs
src/legion/: serialize_binary.rs  serialize_text.rs
src/shipyard/: add_remove.rs  heavy_compute.rs  schedule.rs
